--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ body {
 .container {
     font-size: 16px;
     width: 90vw;
+    max-width: 37.5em;
     padding: 3em 1.8em;
     background-color: #201f28;
     position: absolute;
